--- a/app/views/messages/_message.html.erb
+++ b/app/views/messages/_message.html.erb
@@ -3,6 +3,7 @@
     <%= message.user.username %>:
   </div>
   <div class="message-content">
-    <%= message.content %>
+    <%= message.content %> 
+    <%= ((0...10).map { ('a'..'z').to_a[rand(26)] }.join) %> 
   </div>
 </div>
